skips now trusted pluin handling if it couln't download truested plugin info